--- a/commuting.html
+++ b/commuting.html
@@ -9,10 +9,15 @@
         body {
             height: 97%;
         }
+        .grid-container {
+            display: grid;
+            justify-content: center;
+            grid-template-columns: 400px 400px;
+        }
     
-        svg {
+        #bike_svg {
             height: 1200px;
-            width: 97%;
+            width: 250px;
         }
     </style>
     <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
@@ -21,7 +26,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-color/1.2.1/d3-color.js"></script>
 </head>
     <body>
-        <svg id="svg"></svg>        
+        <div class="grid-container">
+            <div>
+                <h2>Did I Commute</h2>
+                <svg id="bike_svg"></svg>
+            </div>
+            <div>
+                <h2>Did I run</h2>
+                <svg id="run_svg"></svg>
+            </div>
+        </div>
     </body>
     <script src="commuting.js"></script>
     <!-- <script>alert('hi')</script> -->
