changed index file and have running chart displaying

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             height: 1200px;
             width: 250px;
         }
+        #run_svg {
+            height: 1200px;
+            width: 250px;
+        }
     </style>
     <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
     <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
@@ -38,5 +42,6 @@
         </div>
     </body>
     <script src="commuting.js"></script>
+    <script src="running.js"></script>
     <!-- <script>alert('hi')</script> -->
 </html>
