have bar chart added with 15 longest runs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .grid-container {
             display: grid;
             justify-content: center;
-            grid-template-columns: 400px 400px;
+            grid-template-columns: 300px 300px 300px;
         }
     
         #bike_svg {
@@ -39,9 +39,14 @@
                 <h2>Did I run</h2>
                 <svg id="run_svg"></svg>
             </div>
+            <div>
+                <h2>Fifteen Longest Runs in 2021</h2>
+                <svg id="run_stats_svg"></svg>
+            </div>
         </div>
     </body>
     <script src="commuting.js"></script>
     <script src="running.js"></script>
+    <script src="barChart.js"></script>
     <!-- <script>alert('hi')</script> -->
 </html>
