added the streak number, cleaned up the files

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
             width: 250px;
         }
     </style>
-    <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
-    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-color/1.2.1/d3-color.js"></script>
 </head>
@@ -40,6 +38,9 @@
                 <svg id="run_svg"></svg>
             </div>
             <div>
+                <h2>Longest Streak</h2>
+                <span id="streakText" >Hi
+                </span>
                 <h2>Fifteen Longest Runs in 2021</h2>
                 <svg id="run_stats_svg"></svg>
             </div>
@@ -48,5 +49,6 @@
     <script src="commuting.js"></script>
     <script src="running.js"></script>
     <script src="barChart.js"></script>
+    <script src="streak.js"></script>
     <!-- <script>alert('hi')</script> -->
 </html>
