moved functions into modules

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 </head>
     <body>
         <div class="milestone-container">
-            <h2>50 Mile Milestones in 2021</h2>
+            <h2>200 Mile Milestones in 2021</h2>
             <svg id="milestone"></svg>
         </div>
         <div class="grid-container">
-            <div>
+            <!-- <div>
                 <h2>Did I Commute</h2>
                 <svg id="bike_svg"></svg>
-            </div>
+            </div> -->
             <div>
                 <h2>Did I run</h2>
                 <svg id="run_svg"></svg>
@@ -54,15 +54,10 @@
                 <h2>Longest Streak</h2>
                 <span id="streakText" >Hi
                 </span>
-                <h2>Fifteen Longest Runs in 2021</h2>
+                <!-- <h2>Fifteen Longest Runs in 2021</h2> -->
                 <svg id="run_stats_svg"></svg>
             </div>
         </div>
     </body>
-    <script src="commuting.js"></script>
-    <script src="running.js"></script>
-    <script src="barChart.js"></script>
-    <script src="streak.js"></script>
-    <script src="milestone.js"></script>
-    <!-- <script>alert('hi')</script> -->
+    <script type="module" src="main.js"></script>
 </html>
